# Ariadne

./: .gitignore  Ariadne_audit_report.md  Ariadne_issues.md  CLA.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  Directory.Build.props  LICENSE  NOTICE  README.md  THIRD_PARTY_NOTICES.md  deny.toml  issue.md  issue_new.md  实施记录.md  总结机制具体实现计划.md  模块化实施计划.md  项目完成情况.md  项目总计划(旧备份)(禁止删除).md  项目总计划-架构版(禁止删除).md
core/: Cargo.toml
core/resources/: display_name.en.json  display_name.ja.json  display_name.json  prompt_list.json  workflow_node_catalog.json
core/src/: cli.rs  command_error.rs  commands.rs  ipc.rs  lib.rs  node_capabilities.rs  rest.rs
core/src/config/: app_permissions.rs  app_runtime.rs  app_state.rs  atomic_commit.rs  confirmation.rs  migration.rs  mod.rs  models.rs  provider_catalog.rs  secrets.rs  store.rs
core/src/contracts/: artifacts.rs  cancellation.rs  content.rs  errors.rs  events.rs  mod.rs  permissions.rs  ports.rs  registry.rs  resources.rs  workflow.rs
core/src/costs/: budget.rs  ledger.rs  mod.rs  models.rs  pricing.rs
core/src/diagnostics/: mod.rs
core/src/documents/: mod.rs  models.rs  outbox.rs  service.rs
core/src/frontend/: mod.rs  project.rs  project_ai.rs  project_ai_context.rs  service.rs
core/src/git/: models.rs  service.rs
core/src/knowledge/: memory.rs  models.rs  service.rs  traits.rs
core/src/llm/: models.rs  service.rs
core/src/providers/: executor.rs  http.rs  mod.rs  models.rs  protocol.rs  registry.rs  traits.rs  web_search.rs
core/src/rag/: context.rs  line_patch.rs  memory.rs  mod.rs  models.rs  numbering.rs  pipeline.rs  prompt_template.rs  resources.rs  store.rs  summarizer.rs  tools.rs
core/src/retrieval/: embedding.rs  hybrid.rs  knowledge.rs  lifecycle.rs  memory.rs  mod.rs  models.rs  project.rs  provision.rs  qdrant.rs  query.rs  reranker.rs  runtime.rs  sidecar.rs  sqlite.rs  tantivy.rs  tools.rs  traits.rs
core/src/skills/: execution_plan.rs  executor.rs  loader.rs  mod.rs  models.rs  sanitizer.rs
core/src/workflow/: dependencies.rs  integration.rs  mod.rs  nodes.rs  project_canvas.rs  runtime.rs  (+1 more)
core/tests/: command_contracts.rs  config_contracts.rs  core_contracts.rs  cost_contracts.rs  diagnostics_contracts.rs  document_contracts.rs  frontend_contracts.rs  git_contracts.rs  ipc_contracts.rs  knowledge_contracts.rs  llm_contracts.rs  provider_contracts.rs  provider_scope_contracts.rs  rag_contracts.rs  release_acceptance.rs  retrieval_contracts.rs  skill_contracts.rs  workflow_contracts.rs
src-tauri/: Cargo.toml
src-tauri/resources/: display_name.json  prompt_list.json
src-tauri/src/: lib.rs
src-tauri/tests/: config_contracts.rs  core_contracts.rs  cost_contracts.rs  document_contracts.rs  git_contracts.rs  knowledge_contracts.rs  llm_contracts.rs  provider_contracts.rs  rag_contracts.rs  retrieval_contracts.rs  skill_contracts.rs
(+265 files in other folders)
