[workspace]
members = ["core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["yanshaoqwq and Ariadne contributors"]
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/yanshaoqwq/Ariadne"
homepage = "https://github.com/yanshaoqwq/Ariadne"
