[package]
name = "ariadne"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
publish = false

[lib]
name = "ariadne"
path = "src/lib.rs"

[dependencies]
keyring = { version = "4.1.2", optional = true, default-features = false, features = ["v1"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
yaml_serde = "0.10"

[dev-dependencies]
tempfile = "3"

[features]
default = []
system-keychain = ["dep:keyring"]
